<?xml version="1.0" encoding="utf-8"?>
<!--Bhargav Patel (N01373029) & Ripal Patel (N01354619) & Vidhi Kanhye (N01354573) & Nicholas Mohan (N01361663), Section-RNA-->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        app:showAsAction="never"
        android:id="@+id/helpBtn"
        android:title="@string/menu_bar_help_btn_title" />

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/musicBtn"
        android:title="@string/menu_bar_music_btn_title"
        android:icon="@drawable/music_note_foreground">
    </item>

    <item
        android:id="@+id/lightsPwrBtn"
        app:showAsAction="always"
        android:title="@string/menu_bar_lights_pwr_btn_title"
        android:icon="@drawable/poweroff">
    </item>

    <item
        app:showAsAction="never"
        android:id="@+id/bluetoothBtn"
        android:title="@string/menu_bar_bluetooth_btn_title">
    </item>

</menu>