<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lilac"
    tools:context=".ui.music.MusicFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/shalom_edit_text_input"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="208dp"
            android:hint="@string/minutes"
            android:inputType="number"
            android:maxLength="4" />

        <Button
            android:id="@+id/shalom_button_set"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="264dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="59dp"
            android:layout_marginBottom="204dp"
            android:text="@string/set" />

        <TextView
            android:id="@+id/shalom_text_view_countdown"
            android:layout_width="177dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="126dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="142dp"
            android:text="@string/_00_00"
            android:textColor="#000000"
            android:textSize="50dp" />

        <Button
            android:id="@+id/shalom_button_start_pause"
            android:layout_width="110dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="203dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="74dp"
            android:text="@string/t_start" />

        <Button
            android:id="@+id/shalom_button_reset"
            android:layout_width="123dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="210dp"
            android:layout_marginTop="131dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="74dp"
            android:text="@string/reset"
            android:visibility="invisible"
            tools:visibility="visible" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/shalom_IV"
        android:layout_width="212dp"
        android:layout_height="154dp"
        android:src="@drawable/vinyl" />

    <Spinner
        android:id="@+id/shalom_music_spinner"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:visibility="invisible">
    </Spinner>


    <SeekBar
        android:id="@+id/shalom_volume"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/grape"
        android:thumbTint="@color/grape">

    </SeekBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/shalom_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textStyle="bold"
            android:textColor="@android:color/white">
        </TextView>

        <SeekBar
            android:id="@+id/shalom_seekbar"
            android:layout_width="0dp"
            android:progressTint="@color/grape"
            android:thumbTint="@color/grape"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/shalom_timer_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/shalom_rewind"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_fast_rewind">
        </ImageView>

        <ImageView
            android:id="@+id/bt_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/lilac"
            android:elevation="10dp"
            android:src="@drawable/shalom_play">
        </ImageView>

        <ImageView
            android:src="@drawable/shalom_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:background="@color/lilac"
            android:id="@+id/bt_pause"
            android:visibility="gone">
        </ImageView>

        <ImageView
            android:src="@drawable/shalom_forward"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/bt_ff">
        </ImageView>

    </LinearLayout>




</LinearLayout>
